--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "langchain": "^0.0.150",
+    "zod": "^3.22.2",
+    "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
