--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,14 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "langchain": "^0.0.150",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.22.2",
+    "zod-to-json-schema": "^3.21.4"
   }
 }
